--- a/teams/dashboard/templates/base.html
+++ b/teams/dashboard/templates/base.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
   <body>
     {% block body %}  <!-- HERE -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Django Boards</a>
+          <a class="navbar-brand" href="#">DashBoards</a>
         </div>
       </nav>
       <div class="container">
@@ -22,5 +24,6 @@
         {% endblock %}
       </div>
     {% endblock body %}  <!-- AND HERE -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
